--- a/apps/static/assets/scss/custom/_variables-dark.scss
+++ b/apps/static/assets/scss/custom/_variables-dark.scss
@@ -120,3 +120,8 @@ $dropdown-color-dark            : $gray-100 !default;
 $dropdown-bg-dark               : $gray-700 !default;
 $dropdown-border-color-dark     : $gray-500 !default;
 $dropdown-box-shadow-dark       : 0 .5rem 1rem rgba($black, .625) !default;
+
+// Modal
+
+$modal-color-dark               : $gray-100 !default;
+$modal-bg-dark                  : $gray-700 !default;
